--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -692,10 +692,20 @@ fr:
         one: un service sur place
         other: "%{count} services sur place"
         zero: malheureusement pas de service
+      personal_offers_new:
+        _query: 
+        category: 
+        category_query: 
+        default: 
       remote_offers:
         one: Une assistance téléphonique ou un service en ligne
         other: "%{count} Assistances téléphoniques ou services en ligne"
         zero: pas d'assistance téléphonique ni de service en ligne
+      remote_offers_new:
+        _query: 
+        category: 
+        category_query: 
+        default: 
       show_personal: Montre les services locaux
     shared:
       current_and_original_locale:
