--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -476,7 +476,7 @@ pl:
         info: Info
     subscribe:
       success_html: |-
-        Zapisałeś(aś) pomyślnie zapisany(a) na otrzymywanie powiadomień o ofertach na Twój adres e-mail.
+        Zostałeś(aś) pomyślnie zapisany(a) na otrzymywanie powiadomień o ofertach na Twój adres e-mail.
         (<a href="%{unsubscribe_href}">wieder abmelden</a>)
     unsubscribe:
       success_html: |-
@@ -653,6 +653,12 @@ pl:
       section:
         family: Family
         refugees: Refugees
+      sort:
+        nearby: 
+        relevance: 
+      sort_order:
+        nearby: 
+        relevance: 
   js:
     ajax_error:
       error: Błąd wyszukiwania
@@ -744,6 +750,16 @@ pl:
         other: "%{count} porady telefoniczne i oferty online"
         zero: Brak porad telefonicznych i ofert online
       show_personal: Pokaż oferty lokalne
+      personal_offers_new:
+        category: 
+        category_query: 
+        default: 
+        _query: 
+      remote_offers_new:
+        category: 
+        category_query: 
+        default: 
+        _query: 
     shared:
       current_and_original_locale:
         "'150'": Niemiecki język migowy
@@ -935,7 +951,7 @@ pl:
           thu: Czwartek
           tue: Wtorek
           wed: "Środa"
-        heading: Kiedy możesz to zrobić?
+        heading: Kiedy możesz się zgłosić?
       speaking: W jakim języku można Ci pomóc?
       website_section:
         internet_presence: Gdzie dowiesz się więcej w sieci?
@@ -1432,7 +1448,7 @@ pl:
       fill_field: Proszę wypełnij to pole
     show:
       cta_report_errors: Zauważyłeś błąd?
-      google_translate_explanation: To tłumaczenie zostało wykonane automatycznie przez Tłumacza Google. Dlatego często występują błędy językowe. Może się też zdarzyć, że coś brzmi dziwacznie. Wtedy najlepiej przeczytać ten tekst po niemiecku.
+      google_translate_explanation: Tutaj możesz wybrać Twój język. Będziesz mógł przeglądać clarat w Twoim języku. Część tłumaczenia wykonuje aplikacja Tłumacz Google. Niestety czasem występują w nim błędy. Dlatego część tekstu może brzmieć dziwacznie.
     tooltips:
       welcome:
         advanced_search: Chcesz, aby Twoje wyszukiwanie było dokładniejsze? Kliknij tutaj. Otworzy się okienko wyboru.
