--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -438,6 +438,7 @@ ru:
         toggle_section_html:
           one: "Твое предложение  <strong>clarat refugees</strong>"
           other: "Твои предложения  <strong>%{count} clarat refugees</strong>"
+      last_update: Last update
       obfuscated_email: "твой адрес электронной почты"
       refugees:
         heading: Твое предложение  clarat refugees для <span id="secure-email-0">%{email}</span>
@@ -630,6 +631,12 @@ ru:
       section:
         family: Family
         refugees: Refugees
+      sort:
+        nearby: 
+        relevance: 
+      sort_order:
+        nearby: 
+        relevance: 
   js:
     ajax_error:
       error: "Ошибка в поиске"
@@ -719,11 +726,21 @@ ru:
         one: "Предложение на месте"
         other: "%{count} Предложения на месте"
         zero: "К сожалению, нет предложений"
+      personal_offers_new:
+        _query: 
+        category: 
+        category_query: 
+        default: 
       remote_offers:
         few: "%{count} Telefonberatungen und Onlineangebote"
         one: "Одно предложение по телефону или одно предложение он-лайн"
         other: "%{count} Предложения по телефону и он-лайн"
         zero: "Нет предложений по телефону или он-лайн"
+      remote_offers_new:
+        _query: 
+        category: 
+        category_query: 
+        default: 
       show_personal: "Показать предложения на месте"
     shared:
       current_and_original_locale:
