--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -773,6 +773,7 @@ de:
         toggle_section_html:
           one: Dein <strong>clarat refugees</strong>-Angebot
           other: Deine <strong>%{count} clarat refugees</strong>-Angebote
+      last_update: Zuletzt geändert
       obfuscated_email: deine E-Mail-Adresse
       refugees:
         heading: |
@@ -979,6 +980,12 @@ de:
       section:
         family: Family
         refugees: Refugees
+      sort:
+        nearby: Nearby
+        relevance: Relevance
+      sort_order:
+        nearby: Nearby
+        relevance: Relevance
   js:
     ajax_error:
       error: Suchfehler
@@ -1067,10 +1074,44 @@ de:
         one: Ein Angebot vor Ort
         other: "%{count} Angebote vor Ort"
         zero: Leider keine Angebote vor Ort
+      personal_offers_new:
+        _query:
+          one: Ein Angebot vor Ort (%{location}) für den Suchbegriff %{search_query} gefunden
+          other: "%{count} Angebote vor Ort (%{location}) für den Suchbegriff %{search_query} gefunden"
+          zero: Leider keine Angebote vor Ort (%{location}) für den Suchbegriff %{search_query} gefunden
+        category:
+          one: Ein Angebot vor Ort (%{location}) in %{category_path} gefunden
+          other: "%{count} Angebote vor Ort (%{location}) in %{category_path} gefunden"
+          zero: Leider keine Angebote vor Ort (%{location}) in %{category_path} gefunden
+        category_query:
+          one: Ein Angebot vor Ort (%{location}) in %{category_path} für den Suchbegriff %{search_query} gefunden
+          other: "%{count} Angebote vor Ort (%{location}) in %{category_path} für den Suchbegriff %{search_query} gefunden"
+          zero: Leider keine Angebote vor Ort (%{location}) in %{category_path} für den Suchbegriff %{search_query} gefunden
+        default:
+          one: Ein Angebot vor Ort (%{location}) gefunden
+          other: "%{count} Angebote vor Ort (%{location}) gefunden"
+          zero: Leider keine Angebote vor Ort (%{location}) gefunden
       remote_offers:
         one: Eine Telefonberatung oder ein Onlineangebot
         other: "%{count} Telefonberatungen und Onlineangebote"
         zero: Keine Telefonberatungen und Onlineangebote
+      remote_offers_new:
+        _query:
+          one: Eine Telefonberatung oder ein Onlineangebot für den Suchbegriff %{search_query} gefunden
+          other: "%{count} Telefonberatungen und Onlineangebote für den Suchbegriff %{search_query} gefunden"
+          zero: Leider keine Telefonberatungen und Onlineangebote für den Suchbegriff %{search_query} gefunden
+        category:
+          one: Eine Telefonberatung oder ein Onlineangebot in %{category_path} gefunden
+          other: "%{count} Telefonberatungen und Onlineangebote in %{category_path} gefunden"
+          zero: Leider keine Telefonberatungen und Onlineangebote in %{category_path} gefunden
+        category_query:
+          one: Eine Telefonberatung oder ein Onlineangebot in %{category_path} für den Suchbegriff %{search_query} gefunden
+          other: "%{count} Telefonberatungen und Onlineangebote in %{category_path} für den Suchbegriff %{search_query} gefunden"
+          zero: Leider keine Telefonberatungen und Onlineangebote in %{category_path} für den Suchbegriff %{search_query} gefunden
+        default:
+          one: Eine Telefonberatung oder ein Onlineangebot
+          other: "%{count} Telefonberatungen und Onlineangebote"
+          zero: Keine Telefonberatungen und Onlineangebote
       show_personal: Zeige lokale Angebote
     shared:
       current_and_original_locale:
@@ -1902,10 +1943,7 @@ de:
     show:
       cta_report_errors: |
         Hast du einen Fehler entdeckt?
-      google_translate_explanation: |
-        Diese Übersetzungen wurden von Google Translate automatisch gemacht.
-        Da gibt es oft sprachliche Fehler. Es kann also sein, dass etwas komisch
-        klingt. Schau dann lieber noch einmal in den deutschen Text.
+      google_translate_explanation: Oben auf der Seite kannst du deine Sprache anklicken. Dann kannst du clarat in deiner Sprache lesen. Einen Teil der Übersetzung hat die Google Translate API gemacht. Leider gibt es deshalb manchmal sprachliche Fehler. Es kann also sein, dass etwas komisch klingt.
     tooltips:
       welcome:
         advanced_search: |
